# Ready_For_Robots

./: .dockerignore  .env.example  .gitignore  BACKUP_RESTORE_GUIDE.md  CRITICAL_DATA_LOSS_INVESTIGATION.md  DATABASE_RECOVERY.md  DATA_LOSS_INCIDENT_REPORT.md  DEPLOYMENT.md  Dockerfile  EMAIL_SCRIPTS_GUIDE.md  INTELLIGENCE_SCRAPER.md  PIPELINE.md  PM2_RECOVERY_GUIDE.md  QUICKSTART_INTELLIGENCE.md  README.md  RECOVERY_PLAN.md  ROBOT_LEAD_GENERATION.md  ROBOT_LIBRARY_SUMMARY.md  SCRAPER_SYSTEM.md  SOCIAL_MEDIA_COPY.md  STRATEGY.md  WORKFLOW_GUIDE.md  alembic.ini  ecosystem.config.js  fly.toml  main.py  migrations  pyproject.toml  requirements.txt  scraper_health.json  vercel.json
app/: config.py  database.py  main.py
migrations/: env.py
reports/: latest.txt
scraper/: utils.py
scripts/: analyze_scrapers.py  audit_pipeline.py  check_fly_data.py  check_supabase.py  daily_scraper_report.py  dedup_companies.py  emergency_recovery.py  launch_recovery.sh  monitor_lead_count.sh  monitor_pipeline.sh  monitor_scraper_progress.py  monitor_scrapers.py  publish_daily_top25.py  purge_junk_signals.py  quick_seed.py  quick_start.sh  recover_data_local.py  refresh_cold_leads.py  run_intelligence_scraper.py  run_local.sh  scraper_batch_runner.py  seed_leads_v2.py  seed_leads_v3.py  seed_leads_v4.py  seed_leads_v5.py  seed_leads_v6.py  seed_robot_companies.py  seed_robots.py  setup_db.sh  start_all.sh  start_automation.sh  stop_automation.sh  sync_from_production.py  test_enhanced_scraper.py  test_robot_api.py  test_scraper.py  watch_leads.py
tests/: test_scraper.py
(+100 files in other folders)
